force-app/main/default/objects/Event_Area_Code__c/Event_Area_Code__c.object-meta.xml
<CustomObject>
    <description>Family Life Event Area Codes</description>
    <label>Event Area</label>
    <nameField>
        <label>Event Area Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>