force-app/main/default/objects/Event_Area_Code__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>September 2019 The Advisor name was changed to Relationship Rep. In order to keep DB Sync working properly because 3 Apex classes were pulling from this field we relabeled the field to Relationship Rep but keep the API to Advisor since it was their previous name.</description>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Area_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>