force-app/main/default/objects/Event_Area_Code__c/fields/Area_GC_Goal__c.field-meta.xml
<CustomField>
    <fullName>Area_GC_Goal__c</fullName>
    <label>Area GC Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>