force-app/main/default/objects/Event_Area_Code__c/fields/Area_Group_Goal__c.field-meta.xml
<CustomField>
    <fullName>Area_Group_Goal__c</fullName>
    <label>Area Group Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>