force-app/main/default/objects/Event_Area_Code__c/fields/Covid_Phase__c.field-meta.xml
<CustomField>
    <fullName>Covid_Phase__c</fullName>
    <label>Covid Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>