force-app/main/default/objects/Event_Area_Code__c/fields/Divisional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divisional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Area_Codes_Divisional_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>