force-app/main/default/objects/Event_Area_Code__c/fields/Donor_Rep__c.field-meta.xml
<CustomField>
    <fullName>Donor_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Area_Codes_Donor_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>