force-app/main/default/objects/Event_Area_Code__c/fields/Event_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Event Area Code</inlineHelpText>
    <label>Event Area ID</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>