force-app/main/default/objects/Event_Area_Code__c/fields/Event_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Territory_Code__c</fullName>
    <description>Event territory code</description>
    <label>Event Territory Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>T-ABY</fullName>
            </value>
            <value>
                <fullName>T-ALB</fullName>
            </value>
            <value>
                <fullName>T-ALC</fullName>
            </value>
            <value>
                <fullName>T-AMA</fullName>
            </value>
            <value>
                <fullName>T-ANC</fullName>
            </value>
            <value>
                <fullName>T-ATL</fullName>
            </value>
            <value>
                <fullName>T-AUS</fullName>
            </value>
            <value>
                <fullName>T-AVL</fullName>
            </value>
            <value>
                <fullName>T-BAY</fullName>
            </value>
            <value>
                <fullName>T-BLI</fullName>
            </value>
            <value>
                <fullName>T-BND</fullName>
            </value>
            <value>
                <fullName>T-BOI</fullName>
            </value>
            <value>
                <fullName>T-BRN</fullName>
            </value>
            <value>
                <fullName>T-BRO</fullName>
            </value>
            <value>
                <fullName>T-CAK</fullName>
            </value>
            <value>
                <fullName>T-CHA</fullName>
            </value>
            <value>
                <fullName>T-CHI</fullName>
            </value>
            <value>
                <fullName>T-CHS</fullName>
            </value>
            <value>
                <fullName>T-CID</fullName>
            </value>
            <value>
                <fullName>T-CIN</fullName>
            </value>
            <value>
                <fullName>T-CLT</fullName>
            </value>
            <value>
                <fullName>T-COS</fullName>
            </value>
            <value>
                <fullName>T-DAL</fullName>
            </value>
            <value>
                <fullName>T-DAY</fullName>
            </value>
            <value>
                <fullName>T-DCA</fullName>
            </value>
            <value>
                <fullName>T-DEN</fullName>
            </value>
            <value>
                <fullName>T-DES</fullName>
            </value>
            <value>
                <fullName>T-DET</fullName>
            </value>
            <value>
                <fullName>T-DTS</fullName>
            </value>
            <value>
                <fullName>T-GRB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>