force-app/main/default/objects/Event_Area_Code__c/fields/GC_Recruiting_Goal__c.field-meta.xml
<CustomField>
    <fullName>GC_Recruiting_Goal__c</fullName>
    <label>GC Recruiting Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>