force-app/main/default/objects/Event_Area_Code__c/fields/Groups_Activated__c.field-meta.xml
<CustomField>
    <fullName>Groups_Activated__c</fullName>
    <label>Groups Activated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>