force-app/main/default/objects/Event_Area_Code__c/fields/Ministry_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Area_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>