force-app/main/default/objects/Event_Area_Code__c/fields/Ministry_Rep__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Area_Codes_Ministry_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>