force-app/main/default/objects/Event_Area_Code__c/fields/Ministry_Rep_A__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep A</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Area Codes (Ministry Rep A))</relationshipLabel>
    <relationshipName>WTR_Director_1</relationshipName>
    <type>Lookup</type>
</CustomField>