force-app/main/default/objects/Event_Area_Code__c/fields/Ministry_Rep_B__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep B</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Area Codes (Ministry Rep B)</relationshipLabel>
    <relationshipName>Event_Area_Codes3</relationshipName>
    <type>Lookup</type>
</CustomField>