force-app/main/default/objects/Event_Area_Code__c/fields/MR_Match__c.field-meta.xml
<CustomField>
    <fullName>MR_Match__c</fullName>
    <formula>Ministry_Rep_A__r.FirstName = Ministry_Rep__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR Match</label>
    <type>Checkbox</type>
</CustomField>