force-app/main/default/objects/Event_Area_Code__c/fields/MR_User_ID__c.field-meta.xml
<CustomField>
    <fullName>MR_User_ID__c</fullName>
    <formula>Ministry_Rep_A__r.SF_User_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MR User ID</label>
    <type>Text</type>
</CustomField>