force-app/main/default/objects/Event_Area_Code__c/fields/Next_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Event_Date__c</fullName>
    <label>Next Event Date</label>
    <type>Date</type>
</CustomField>