force-app/main/default/objects/Event_Area_Code__c/fields/Next_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Event_Name__c</fullName>
    <label>Next Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>