force-app/main/default/objects/Event_Area_Code__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greater Northwest</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Mid South</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Red River</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Pacific Southwest</fullName>
            </value>
            <value>
                <fullName>Upper Midwest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>