force-app/main/default/objects/Event_Area_Code__c/fields/Resync_Next_Territory__c.field-meta.xml
<CustomField>
    <fullName>Resync_Next_Territory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resync Next Territory</label>
    <type>Checkbox</type>
</CustomField>