force-app/main/default/objects/Event_Area_Code__c/fields/Territory_Next_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Territory_Next_Event_Date__c</fullName>
    <formula>Event_Territory__r.Next_Event_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Next Event Date</label>
    <type>Date</type>
</CustomField>