force-app/main/default/objects/Event_Area_Code__c/fields/Vol_Coach_Goal__c.field-meta.xml
<CustomField>
    <fullName>Vol_Coach_Goal__c</fullName>
    <label>Vol Coach Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>