force-app/main/default/objects/Event_Area_Code__c/fields/WTR_Director_1__c.field-meta.xml
<CustomField>
    <fullName>WTR_Director_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WTR Director</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Area Codes (WTR Director 1)</relationshipLabel>
    <relationshipName>Event_Area_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>