force-app/main/default/objects/Event_Area_Code__c/fields/WTR_Director_2__c.field-meta.xml
<CustomField>
    <fullName>WTR_Director_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WTR Director 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Area Codes (WTR Director 2)</relationshipLabel>
    <relationshipName>Event_Area_Codes2</relationshipName>
    <type>Lookup</type>
</CustomField>