force-app/main/default/objects/Event_Area_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Event_Territory_Code__c</columns>
    <columns>Event_Territory__c</columns>
    <columns>Region__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Next_Event_Date__c</columns>
    <columns>Next_Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>