force-app/main/default/objects/Event_Area_Code__c/listViews/Areas.listView-meta.xml
<ListView>
    <fullName>Areas</fullName>
    <columns>NAME</columns>
    <columns>Event_Territory__c</columns>
    <columns>Event_Territory_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Territory_Next_Event_Date__c</columns>
    <columns>Territory_Next_Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Area</value>
    </filters>
    <label>Areas</label>
</ListView>