force-app/main/default/objects/Event_Area_Code__c/listViews/Contacts_from_Users.listView-meta.xml
<ListView>
    <fullName>Contacts_from_Users</fullName>
    <columns>NAME</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>Ministry_Rep_B__c</columns>
    <columns>Divisional_Manager__c</columns>
    <columns>WTR_Director_1__c</columns>
    <columns>Advisor__c</columns>
    <columns>Advisor_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ministry Reps and Directors</label>
</ListView>