force-app/main/default/objects/Event_Area_Code__c/listViews/Event_Area_with_Territory.listView-meta.xml
<ListView>
    <fullName>Event_Area_with_Territory</fullName>
    <columns>NAME</columns>
    <columns>Event_Territory__c</columns>
    <columns>Event_Territory_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Region__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Next_Event_Date__c</columns>
    <columns>Next_Event_Name__c</columns>
    <columns>Territory_Next_Event_Date__c</columns>
    <columns>Territory_Next_Event_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Event Area with Territory</label>
</ListView>