force-app/main/default/objects/Event_Area_Code__c/listViews/Event_Areas_with_Donor_Rep.listView-meta.xml
<ListView>
    <fullName>Event_Areas_with_Donor_Rep</fullName>
    <columns>Region__c</columns>
    <columns>Donor_Rep__c</columns>
    <columns>Event_Area_ID__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>WTR_Director_1__c</columns>
    <columns>Advisor__c</columns>
    <columns>Ministry_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Advisor__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Event Areas with Donor Rep</label>
</ListView>