force-app/main/default/objects/Event_Area_Code__c/listViews/Next_Event_Area.listView-meta.xml
<ListView>
    <fullName>Next_Event_Area</fullName>
    <columns>NAME</columns>
    <columns>Next_Event_Date__c</columns>
    <columns>Next_Event_Name__c</columns>
    <columns>Region__c</columns>
    <columns>Advisor__c</columns>
    <columns>Advisor_Manager__c</columns>
    <columns>Ministry_Rep__c</columns>
    <columns>Ministry_Rep_2__c</columns>
    <columns>Ministry_Rep_A__c</columns>
    <columns>Ministry_Rep_B__c</columns>
    <columns>Divisional_Manager__c</columns>
    <columns>Donor_Rep__c</columns>
    <columns>Event_Territory_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Next Event</label>
</ListView>